<resources>
    <string name="hello_world">Hello world!</string>

    <string name="app_name">SmartGrocery</string>

    <string name="title_section1">Items list</string>
    <string name="title_section2">Grocery list</string>
    <string name="title_section3">Markets list</string>
    <string name="title_section4">Carts list</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!--Items-->
    <string name="hintItemName">Item Name</string>
    <string name="add_new_item">Add new Item</string>

    <!--Grocery Lists-->
    <string name="add_new_grocerylist">Add new list</string>
    <string name="hintGroceryListName">List Name</string>
    <string name="hintGroceryListDate">Date (YYYY-MM-DD)</string>

    <!--Markets-->
    <string name="add_market">Add new Market</string>
    <string name="hintMarketName">Market Name</string>

    <!--Carts-->
    <string name="add_cart">Add new Cart</string>

    <string name="error_name_value">Field name is empty</string>
    <string name="error_date_value">Field date is empty</string>
    <string name="error_item_listed">This item is already listed</string>
    <string name="error_item_invalid">The new item must be added first</string>

    <!-- Buttons -->
    <string name="buttonAdd">Add</string>
    <string name="buttonUpdate">Update</string>
    <string name="buttonDelete">Delete</string>
    <string name="buttonOK">OK</string>

    <string name="title_activity_add_item">AddItemActivity</string>
    <string name="title_activity_edit_item">EditItemActivity</string>
    <string name="title_activity_add_grocery_list">AddGroceryListActivity</string>
    <string name="title_activity_edit_grocery_list">EditGroceryListActivity</string>
    <string name="title_activity_fill_grocery_list">FillGroceryListActivity</string>
    <string name="title_activity_add_market">AddMarketActivity</string>
    <string name="title_activity_edit_market">EditMarketActivity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
